--- a/index.html
+++ b/index.html
@@ -565,8 +565,8 @@
         }
 
         .university-logo {
-            width: 240px;
-            height: 160px;
+            width: 270px;
+            height: 180px;
             object-fit: contain;
             border-radius: 8px;
             flex-shrink: 0;
@@ -1100,10 +1100,10 @@
                     <i class="fas fa-envelope"></i>
                     Get In Touch
                 </a>
-                <a href="#projects" class="btn btn-secondary">
+<!--                 <a href="#projects" class="btn btn-secondary">
                     <i class="fas fa-folder"></i>
                     View Projects
-                </a>
+                </a> -->
             </div>
         </div>
     </section>
