--- a/index.html
+++ b/index.html
@@ -1114,8 +1114,8 @@
         <p class="section-subtitle">Getting to know me better</p>
         <div class="about-content">
             <div class="about-text">
-                <p>Experienced Data Engineer skilled in building robust data ecosystems, from ingestion to insights. Passionate about cloud platforms, big data processing, and creating data-driven solutions that drive business value. Currently pursuing MSc in Data Science at The University of Edinburgh.</p>
-                <p>With over 3 years of professional experience at Oracle Financial Services, I have successfully architected and implemented large-scale data pipelines, led data lake migration projects, and delivered impactful solutions that improved processing efficiency by up to 25% for enterprise clients.</p>
+                <p>Experienced Data Engineer skilled in building robust data ecosystems, from ingestion to insights. Passionate about cloud platforms, big data processing, and creating data-driven solutions that drive business value. I am currently pursuing MSc in Data Science at The University of Edinburgh.</p>
+                <p>With over 3 years of professional experience at Oracle Financial Services, I have successfully architected and implemented large-scale data pipelines, led data lake migration projects, and delivered impactful solutions.</p>
             </div>
             <div class="about-image">
                 <div class="profile-image-container">
