--- a/index.html
+++ b/index.html
@@ -1094,7 +1094,7 @@
         <div class="hero-content">
             <p class="hero-subtitle">Hello, I'm</p>
             <h1 class="hero-title">Asutosh Samal</h1>
-            <p class="hero-description">Data Engineer passionate about building robust data ecosystems and creating data-driven solutions that drive business value</p>
+            <p class="hero-description">Cloud-native data architect | Builder of intelligent pipelines | Transforming raw data into strategic assets</p>
             <div class="hero-cta">
                 <a href="#contact" class="btn btn-primary">
                     <i class="fas fa-envelope"></i>
