--- a/index.html
+++ b/index.html
@@ -1111,7 +1111,7 @@
     <!-- About Section -->
     <section class="section reveal" id="about">
         <h2 class="section-title">About Me</h2>
-        <p class="section-subtitle">Getting to know me better</p>
+<!--         <p class="section-subtitle">Getting to know me better</p> -->
         <div class="about-content">
             <div class="about-text">
                 <p>Experienced Data Engineer skilled in building robust data ecosystems, from ingestion to insights. Passionate about cloud platforms, big data processing, and creating data-driven solutions that drive business value. I am currently pursuing MSc in Data Science at The University of Edinburgh.</p>
