--- a/index.html
+++ b/index.html
@@ -1129,12 +1129,12 @@
     <!-- Experience Section -->
     <section class="section reveal" id="experience">
         <h2 class="section-title">Professional Experience</h2>
-        <p class="section-subtitle">My professional journey</p>
+<!--         <p class="section-subtitle">My professional journey</p> -->
         
         <div class="experience-item">
             <div class="item-header" onclick="toggleWorkDetails(this)">
                 <div>
-                    <div class="item-title">Oracle Financial Services Software Limited</div>
+                    <div class="item-title">ORACLE Financial Services Software Limited</div>
                     <div class="item-company">Associate Consultant - Data Engineer</div>
                     <div class="item-meta">
                         <span class="item-date">Aug 2021 – May 2024</span>
@@ -1178,7 +1178,7 @@
     <!-- Education Section -->
     <section class="section reveal" id="education">
         <h2 class="section-title">Education</h2>
-        <p class="section-subtitle">My academic background</p>
+<!--         <p class="section-subtitle">My academic background</p> -->
         
         <div class="education-item">
             <div class="education-header">
@@ -1213,8 +1213,8 @@
 
     <!-- Skills Section -->
     <section class="section reveal" id="skills">
-        <h2 class="section-title">Technical Skills</h2>
-        <p class="section-subtitle">Technologies I work with</p>
+        <h2 class="section-title">Technologies I work with</h2>
+<!--         <p class="section-subtitle">Technologies I work with</p> -->
         <div class="skills-container">
             <div class="skill-card">
                 <i class="fas fa-code skill-icon"></i>
@@ -1248,7 +1248,7 @@
             </div>
             <div class="skill-card">
                 <i class="fas fa-chart-bar skill-icon"></i>
-                <h3 class="skill-title">Visualization</h3>
+                <h3 class="skill-title">Visualization & Tools</h3>
                 <ul class="skill-list">
                     <li>Power BI</li>
                     <li>BIP</li>
