--- a/index.html
+++ b/index.html
@@ -1114,8 +1114,9 @@
 <!--         <p class="section-subtitle">Getting to know me better</p> -->
         <div class="about-content">
             <div class="about-text">
-                <p>Experienced Data Engineer skilled in building robust data ecosystems, from ingestion to insights. Passionate about cloud platforms, big data processing, and creating data-driven solutions that drive business value. I am currently pursuing MSc in Data Science at The University of Edinburgh.</p>
-                <p>With over 3 years of professional experience at Oracle Financial Services, I have successfully architected and implemented large-scale data pipelines, led data lake migration projects, and delivered impactful solutions.</p>
+                <p>A data engineer who loves solving meaningful problems with code and curiosity. My journey started when I was 14, explaining time travel paradoxes to my school’s science club. That early spark turned into a passion for logic, structure, and systems that make a difference.</p>
+                <p>During the pandemic, I helped a small business, NEEV, build their online store, not just writing code, but watching real people benefit from it. Their conversions doubled, and I realized how powerful technology can be.</p>
+                <p>With over three years of experience at Oracle, I’ve had the opportunity to design and implement large-scale systems, that made a tangible impact. I look forward to building on this foundation together and creating something even bigger.</p>
             </div>
             <div class="about-image">
                 <div class="profile-image-container">
@@ -1248,7 +1249,7 @@
             </div>
             <div class="skill-card">
                 <i class="fas fa-chart-bar skill-icon"></i>
-                <h3 class="skill-title">Visualization & Tools</h3>
+                <h3 class="skill-title">Visuals & Tools</h3>
                 <ul class="skill-list">
                     <li>Power BI</li>
                     <li>BIP</li>
