--- a/index.html
+++ b/index.html
@@ -1146,11 +1146,11 @@
             </div>
             <div class="work-details">
                 <ul>
-                    <li>Architected 20+ end-to-end data pipelines using Azure Data Factory, Synapse Analytics, and Power BI, collaborating with 5 business units to standardize data workflows and process 10GB of daily data efficiently.</li>
-                    <li>Led a comprehensive data lake migration project, implementing 150+ Apache Spark and HDFS pipelines for a leading national bank, resulting in 25% improved processing efficiency and centralized data architecture.</li>
-                    <li>Developed automated data mapping solutions for Oracle's internal EAsMAP project using machine learning classification models, reducing initial data assessment time by 50% and optimizing the overall mapping process.</li>
-                    <li>Designed and built 6 profitability mapping solutions using Informatica while creating 4 interactive client dashboards with BIP and Power BI, significantly enhancing data visualization capabilities for stakeholders.</li>
-                    <li>Represented the Data Lake Migration project during a strategic three-month client engagement in Saudi Arabia, delivering executive presentations to senior leadership including the CFO and successfully managing project deliverables.</li>
+                    <li>Architected 20 end-to-end data pipelines using Azure Data Factory, Synapse Analytics, and Power BI. Collaborated with 5 business units to standardise data workflows, processing 10GB daily data.</li>
+                    <li>Delivered data lake migration project, implementing a cumulative 150 Apache Spark and HDFS pipelines for a leading national bank. The project boosted their processing efficiency by 25% and centralised data into a scalable data lake, migrating from Informatica.</li>
+                    <li>Automated data mapping evaluation for Oracle’s internal EAsMAP project by utilizing 2 classification models. This approach reduced the turnaround time for the initial data assessment by 50%, optimising the overall data mapping process.</li>
+                    <li>Built 6 profitability mappings using Informatica, streamlining data workflows for enhanced efficiency. Created 4 interactive client reports using BIP and Power BI, improving data visualisation for clients.</li>
+                    <li>Represented the Data Lake Migration project during a three-month client site visit in Saudi Arabia. Delivered a detailed presentation to the on-site team, including the client’s CFO, outlining project challenges and progress. Additionally, developed 10 business reports using BI Publisher to support the team’s ongoing project requirements.</li>
                 </ul>
             </div>
         </div>
@@ -1169,7 +1169,7 @@
             </div>
             <div class="work-details">
                 <ul>
-                    <li>Successfully transitioned NEEV to online sales during the COVID-19 pandemic by establishing and maintaining their e-commerce website using Shopify, achieving a 50% increase in sales revenue.</li>
+                    <li>Successfully transitioned NEEV to online sales during the COVID-19 pandemic. Established their e-commerce website using Shopify, achieving a 50% increase in sales revenue.</li>
                     <li>Managed comprehensive social media strategy across Facebook, LinkedIn, and Instagram platforms to enhance brand visibility and customer engagement.</li>
                 </ul>
             </div>
