--- a/index.html
+++ b/index.html
@@ -1316,9 +1316,12 @@
     <section class="section reveal" id="activities">
         <h2 class="section-title">Extra-Curricular Activities</h2>
         <p class="section-subtitle">Beyond professional work</p>
+
+
+        
         
         <div class="activity-item">
-            <div class="item-header">
+            <div class="item-header" onclick="toggleWorkDetails(this)">
                 <div>
                     <div class="item-title">RIVIERA Annual Cultural Fest - VIT</div>
                     <div class="item-company">Student Coordinator</div>
@@ -1337,7 +1340,7 @@
         </div>
 
         <div class="activity-item">
-            <div class="item-header">
+            <div class="item-header" onclick="toggleWorkDetails(this)">
                 <div>
                     <div class="item-title">NEEV (NGO)</div>
                     <div class="item-company">Volunteer</div>
