--- a/index.html
+++ b/index.html
@@ -1270,12 +1270,12 @@
                 <div class="project-content">
                     <h3 class="project-title">BlazeDB Query Engine</h3>
                     <p class="project-description">
-                        Developed a high-performance Java-based SQL engine supporting 5 core database operators including scan, select, join, aggregate, and sort operations with comprehensive type-safe tuple handling. The engine implements advanced query optimization techniques such as predicate pushdown and left-deep join ordering, achieving 40% faster query response times compared to baseline implementations.
+                        Developed Java-based SQL engine supporting 5 core operators (scan, select, join, aggregate, sort) with type-safe tuple handling. Optimised query execution through predicate pushdown and left-deep join ordering, achieving 40% faster query response times.
                     </p>
                     <div class="project-tech">
                         <span class="tech-tag">Java</span>
                         <span class="tech-tag">SQL</span>
-                        <span class="tech-tag">Query Optimization</span>
+                        <span class="tech-tag">Query Engine</span>
                         <span class="tech-tag">Database Systems</span>
                     </div>
                     <div class="project-links">
@@ -1289,9 +1289,9 @@
             <div class="project-card">
                 <div class="project-image"></div>
                 <div class="project-content">
-                    <h3 class="project-title">Cloud-Native Analytics Pipeline on AWS</h3>
+                    <h3 class="project-title">Superstore Analytics on AWS:</h3>
                     <p class="project-description">
-                        Built a comprehensive serverless data analytics pipeline leveraging AWS cloud services including S3 for storage, Glue for ETL processing, Athena for querying, and QuickSight for visualization. The pipeline processes Superstore sales data with automated ETL workflows, intelligent data partitioning strategies, and interactive business intelligence dashboards for real-time insights.
+                        Built a scalable serverless data pipeline using AWS S3, Glue, Athena, and QuickSight. Leveraged the technologies above to analyse Superstore sales data with automated ETL, partitioned storage, and interactive dashboards.
                     </p>
                     <div class="project-tech">
                         <span class="tech-tag">AWS</span>
