--- a/index.html
+++ b/index.html
@@ -1441,21 +1441,21 @@
                 <div class="hobby-icon">🏓</div>
                 <h3 class="hobby-title">Table Tennis</h3>
                 <p class="hobby-description">
-                    Passionate about the fast-paced strategy and precision of table tennis. Love the mental challenge and quick reflexes required in competitive play.
+                    I discovered table tennis during lockdown when everything else stopped. What started as something to do became my daily escape. Now I take my paddle everywhere I go. It reminds me that even when life gets tough, trying something new can surprise you.
                 </p>
             </div>
             <div class="hobby-card">
                 <div class="hobby-icon">🏐</div>
                 <h3 class="hobby-title">Volleyball</h3>
                 <p class="hobby-description">
-                    Enjoy the teamwork and coordination aspects of volleyball. It's a great way to stay active and build strong connections with teammates.
+                    Captaining my school team was one of my proudest moments. We played through so many competitions together. Volleyball showed me what real teamwork looks like. When everyone trusts each other and communicates, magic happens on the court. Those lessons stuck with me long after the final whistle.
                 </p>
             </div>
             <div class="hobby-card">
                 <div class="hobby-icon">🏏</div>
                 <h3 class="hobby-title">Cricket</h3>
                 <p class="hobby-description">
-                    Cricket enthusiast who appreciates the strategic depth and tradition of the game. Love both playing and analyzing match strategies.
+                    Cricket has been with me since childhood. My friends and I would turn any street into our cricket ground. It wasn't about perfect technique or winning every game. It was about laughter, getting back up after tough losses, and the pure joy of being together.  
                 </p>
             </div>
         </div>
