--- a/index.html
+++ b/index.html
@@ -1361,7 +1361,28 @@
             </div>
         </div> -->
 
-        <div class="activity-item">
+        <div class="experience-item">
+            <div class="item-header" onclick="toggleWorkDetails(this)">
+                <div>
+                    <div class="item-title">NGO- New Education and Environment Visions</div>
+                    <div class="item-company">Volunteer</div>
+                    <div class="item-meta">
+                        <span class="item-date">2020-2021</span>
+                        <span class="item-location">India</span>
+                    </div>
+                </div>
+                <i class="fas fa-chevron-down expand-icon"></i>
+            </div>
+            <div class="work-details">
+                <ul>
+                    <li>Mentored over 50 children in Mathematics and English, achieving an impressive 80% pass rate in their school examinations through personalized tutoring and educational support.</li>
+                    <li>Led a community health initiative team to vaccinate more than 100 cattle against lumpy skin disease, contributing to livestock welfare and community health in the region.</li>
+                    <li>Organized and executed four large-scale food distribution drives, providing essential support to over 1,000 individuals and families in need during challenging times.</li>
+               </ul>
+            </div>
+        </div>
+
+<!--         <div class="activity-item">
             <div class="item-header" onclick="toggleWorkDetails(this)">
                 <div>
                     <div class="item-title">NEEV (NGO)</div>
@@ -1379,7 +1400,7 @@
                     <li>Organized and executed four large-scale food distribution drives, providing essential support to over 1,000 individuals and families in need during challenging times.</li>
                 </ul>
             </div>
-        </div>
+        </div> -->
     </section>
 
     <!-- Awards Section -->
